feat(docker) improve docker documentation